backend standalone fix